# intelligence-representation

./: .gitignore  AGENTS.md  AGENTS.override.md  README.md  pyproject.toml
docs/: architecture.md  bitter-lesson.md  compute-costs.md  compute-estimates.md  compute-runs.md  concept.md  current-evidence.md  current-experiment.md  current-results.md  datasets.md  evaluation.md  evidence.md  experiment-001.md  experiment-002.md  experiment-003.md  experiment-02-contextual-claims.md  experiment-03-contextual-state-update.md  experiment-04-observation-belief-conflict.md  experiment-07-world-state-update.md  experiment-08-state-hub.md  experiment-09-observation-memory.md  experiment-10-observation-memory-log.md  experiment-11-ngram-retrieval.md  experiment-12-retrieval-evaluation.md  experiment-13-predictive-loop.md  experiment-14-predictor-interface.md  experiment-17-observation-assisted-prediction.md  experiment-19-ambiguous-multihop-prediction.md  experiment-20-temporal-multihop-prediction.md  experiment-23-learned-transition-predictor.md  experiment-24-prediction-error-update-loop.md  failure-modes.md  learning-and-execution.md  model-boundaries.md  model-input-boundaries.md  predictive-representation-system.md  predictive-token-machine.md  runpod.md  signal-and-symbol.md  state-taxonomy.md  (+3 more)
experiments/: ambiguous_multihop_prediction.py  learned_transition_predictor.py  multihop_observation_prediction.py  ngram_observation_memory.py  observation_belief_conflict.py  observation_stream.py  prediction_error_update_loop.py  predictor_evaluation.py  predictor_interface.py  (+6 more)
(+315 files in other folders)
