[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligence-representation"
version = "0.1.0"
description = "A small predictive representation scaffold for intelligence representation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "python-shogi>=1.1.1",
    "tokenizers>=0.23.1",
]

[project.optional-dependencies]
torch = [
    "torch>=2.2",
]
vision = [
    "torchvision>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]
